--- a/ledger.html
+++ b/ledger.html
@@ -4,11 +4,42 @@
 
 <body>
   <h1>Simple Ledger</h1>
+  <h5>Bank Total: {{bankTotal}}</h5>
+  <h5>User's Total: {{predictedTotal}}</h5>
+
   <button id='addTransaction'>Add Transaction</button>
 
   {{> ledger}}
 </body>
 
 <template name="ledger">
-  {{> reactiveTable collection=trans}}
+  {{> reactiveTable collection=transactions settings=tableSettings}}
+</template>
+
+<template name="vendor">
+  <input type="text" class="trans-form" placeholder="Vendor" value="{{vendor}}" data-trans-id="{{_id}}" data-field="vendor">
+</template>
+
+<template name="category">
+  <input type="text" class="trans-form" placeholder="Category" value="{{category}}" data-trans-id="{{_id}}" data-field="category">
+</template>
+
+<template name="amount">
+  <input type="text" class="trans-form" placeholder="$0.00" value="{{formattedAmount}}" data-trans-id="{{_id}}" data-field="amount">
+</template>
+
+<template name="date"> 
+  <input type="text" class="trans-form" placeholder="{{date}}" value="{{date}}" data-trans-id="{{_id}}" data-field="date">
+</template>
+
+<template name="crd">
+  <div class="btn-group" role="group" aria-label="...">
+    <button type="button" class="btn btn-default btn-sm trans-form {{#if cleared}}active{{/if}}" data-trans-id="{{_id}}" data-field="cleared">C</button>
+    <button type="button" class="btn btn-default btn-sm trans-form {{#if recurring}}active{{/if}}" data-trans-id="{{_id}}" data-field="recurring">R</button>
+    <button type="button" class="btn btn-default btn-sm trans-form {{#if deposit}}active{{/if}}" data-trans-id="{{_id}}" data-field="deposit">D</button>
+  </div>
+</template>
+
+<template name='deleteRow'>
+  <button type="button" class="btn btn-danger btn-sm delete" data-trans-id="{{_id}}">Delete</button>
 </template>
