Start of undo/delete

--- a/ledger.html
+++ b/ledger.html
@@ -56,4 +56,5 @@
 
 <template name='deleteRow'>
   <button type="button" class="btn btn-danger btn-sm delete" data-trans-id="{{_id}}">Delete</button>
+  <div class="undo-overlay"><a href="#" class='undo'>Undo</a></div>
 </template>
