Fixes undo-overlay
Undo overlay now working on page resize.

--- a/ledger.html
+++ b/ledger.html
@@ -59,5 +59,7 @@
 
 <template name='deleteRow'>
   <button type="button" class="btn btn-danger btn-sm delete" data-trans-id="{{_id}}">Delete</button>
-  <div class="undo-overlay"><a href="#" class='undo'>Undo</a></div>
+  <div class="undo-overlay">
+    <div class='btn btn-primary btn-sm undo'>Undo</div>
+  </div>
 </template>
