Adds working undo delete button
Undo button now sets the document's delete flag to false

--- a/ledger.html
+++ b/ledger.html
@@ -60,6 +60,6 @@
 <template name='deleteRow'>
   <button type="button" class="btn btn-danger btn-sm delete" data-trans-id="{{_id}}">Delete</button>
   <div class="undo-overlay">
-    <div class='btn btn-primary btn-sm undo'>Undo</div>
+    <div class='btn btn-primary btn-sm undo' data-trans-id="{{_id}}">Undo</div>
   </div>
 </template>
