Adds delete undo timer
Sets undo timer to 10 seconds with a timer indicator at the bottom of the undo button

--- a/ledger.html
+++ b/ledger.html
@@ -60,6 +60,11 @@
 <template name='deleteRow'>
   <button type="button" class="btn btn-danger btn-sm delete" data-trans-id="{{_id}}">Delete</button>
   <div class="undo-overlay">
-    <div class='btn btn-primary btn-sm undo' data-trans-id="{{_id}}">Undo</div>
+    <div class='btn btn-sm btn-primary undo' data-trans-id="{{_id}}">
+      <div class="undo-timer-wrapper">
+        <div class="undo-timer"></div>
+      </div>
+      Undo
+    </div>
   </div>
 </template>
