--- a/ledger.html
+++ b/ledger.html
@@ -4,7 +4,7 @@
 </head>
 
 <body style="margin: 10px;">
-    <nav class="navbar navbar-default navbar-fixed-top" style="padding-top: 5px; background-color: #5b4282; color: #fff;">
+    <nav class="navbar navbar-default navbar-fixed-top" style="padding-top: 5px; border-bottom-width: 0px; background-color: #5b4282; color: #f8f3ff;">
       <div class="container">
       
         <div class="row">          
@@ -32,10 +32,25 @@
           </div>
         </div>
 
-  
-
+        <div class="row">  
+          <div class="col-md-12">
         
+            <table id="ledger-table-header">
+              <thead>
+                <tr>
+                  <th>Vendor</th>
+                  <th>Category</th>
+                  <th>Amount</th>
+                  <th>Date</th>
+                  <th></th>
+                  <th></th>
+                </tr>
+              </thead>
+            </table>
+          </div>
+        </div>
       </div>
+
     </nav>
   <div class="container-fluid" style="margin-top: 120px;">
 
